--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8">
 
-  <title>SystemJS</title>
+  <title>Redux Test</title>
   <meta name="description" content="SystemJS starter app">
   <meta name="author" content="Nverba">
 
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400|Roboto:300,400,500,700|Karla:400" rel="stylesheet">
   <script src="./node_modules/systemjs/dist/system.js"></script>
   <script>
     SystemJS.config({
@@ -26,7 +27,9 @@
       width: 100%;
       height: 100%;
       margin: 0;
-      padding: 0;
+      padding: 5px;
+      font-family: Roboto;
+      box-sizing: border-box;
     }
 
     #reflow {
@@ -41,7 +44,9 @@
 
 <body>
 
-    <svg id="reflow"></svg>
+  <h3>redux test</h3>
+
+  <P>Using only the Redux debugger to issue actions, complete the list of cases specified in the reducers.js file.</P>
 
 </body>
 </html>
